changes to demo project

--- a/spec/demo/Gemfile
+++ b/spec/demo/Gemfile
@@ -1,6 +1,7 @@
 source 'https://rubygems.org'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
+ruby '2.0.0'
 gem 'rails', '4.0.1'
 
 # Use sqlite3 as the database for Active Record
@@ -13,7 +14,7 @@ gem 'sass-rails', '~> 4.0.0'
 gem 'uglifier', '>= 1.3.0'
 
 # Use CoffeeScript for .js.coffee assets and views
-gem 'coffee-rails', '~> 4.0.0'
+#gem 'coffee-rails', '~> 4.0.0'
 
 # See https://github.com/sstephenson/execjs#readme for more supported runtimes
 # gem 'therubyracer', platforms: :ruby
@@ -22,7 +23,7 @@ gem 'coffee-rails', '~> 4.0.0'
 gem 'jquery-rails'
 
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
-gem 'turbolinks'
+#gem 'turbolinks'
 
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 1.2'
@@ -42,4 +43,11 @@ end
 # gem 'capistrano', group: :development
 
 # Use debugger
+#gem 'kojac', :git => 'http://github.com/buzzware/KOJAC', :ref => '467817b22ebe5802323006746845a1d14764e00a'
+gem 'kojac', :path => '/Users/gary/repos/KOJAC'
+gem "active_model_serializers", git: "http://github.com/rails-api/active_model_serializers"
 # gem 'debugger', group: [:development, :test]
+gem 'rspec-rails', :group => [:development,:test]
+gem 'database_cleaner', :group => :test
+gem "show_me_the_cookies", :group => :test
+gem "faker", :group => [:development,:test]
