--- a/spec/demo/Rakefile
+++ b/spec/demo/Rakefile
@@ -4,3 +4,27 @@
 require File.expand_path('../config/application', __FILE__)
 
 Demo::Application.load_tasks
+
+# BEGIN
+Rake.application.instance_variable_get('@tasks').delete('db:test:prepare')
+namespace :db do
+  namespace :test do
+    desc "Prepare test db by migrating"
+    task :prepare => [:environment, :load_config] do
+	    ActiveRecord::Tasks::DatabaseTasks.purge(ActiveRecord::Base.configurations['test'])
+	    ActiveRecord::Base.establish_connection(ActiveRecord::Base.configurations['test'])
+	    ActiveRecord::Migrator.migrate(ActiveRecord::Migrator.migrations_path)
+	    Rake::Task['db:schema:dump'].invoke
+    end
+  end
+end
+
+namespace :db do
+  desc "Drop all tables"
+  task :drop_tables => :environment do
+    conn = ActiveRecord::Base.connection
+    tables = conn.execute("show tables").map { |r| r[0] }
+    #tables.delete "schema_migrations"
+    tables.each { |t| conn.execute("DROP TABLE #{t}") }
+  end
+end
