--- a/spec/demo/Gemfile
+++ b/spec/demo/Gemfile
@@ -43,11 +43,17 @@ end
 # gem 'capistrano', group: :development
 
 # Use debugger
-#gem 'kojac', :git => 'http://github.com/buzzware/KOJAC', :ref => '467817b22ebe5802323006746845a1d14764e00a'
-gem 'kojac', :path => '/Users/gary/repos/KOJAC'
-gem "active_model_serializers", git: "http://github.com/rails-api/active_model_serializers"
 # gem 'debugger', group: [:development, :test]
+
+gem 'buzztools', :github => 'buzzware/buzztools', :ref => 'a403e6fad32b225be82021a6765df53954c8a3d0'
+#gem 'buzztools', :path => '/Users/gary/repos/buzztools'
+
+#gem 'kojac', :git => 'http://github.com/buzzware/KOJAC', :ref => '467817b22ebe5802323006746845a1d14764e00a'
+gem 'kojac', :path => '../..'
+gem "active_model_serializers", git: "http://github.com/rails-api/active_model_serializers"
 gem 'rspec-rails', :group => [:development,:test]
-gem 'database_cleaner', :group => :test
-gem "show_me_the_cookies", :group => :test
-gem "faker", :group => [:development,:test]
+#gem 'database_cleaner', :group => :test
+#gem "show_me_the_cookies", :group => :test
+#gem "faker", :group => [:development,:test]
+gem "faker"
+gem "factory_girl_rails", :group => [:test, :development]
