--- a/spec/demo/Rakefile
+++ b/spec/demo/Rakefile
@@ -5,16 +5,17 @@ require File.expand_path('../config/application', __FILE__)
 
 Demo::Application.load_tasks
 
-# BEGIN
-Rake.application.instance_variable_get('@tasks').delete('db:test:prepare')
+Rake::Task['db:test:prepare'].clear_prerequisites
+Rake::Task['db:test:prepare'].enhance [:environment, :load_config]
+
+Rake::Task['db:test:clone_structure'].clear
+Rake.application.instance_variable_get('@tasks').delete('db:test:clone_structure')
 namespace :db do
   namespace :test do
     desc "Prepare test db by migrating"
-    task :prepare => [:environment, :load_config] do
-	    ActiveRecord::Tasks::DatabaseTasks.purge(ActiveRecord::Base.configurations['test'])
+    task :clone_structure => [:environment, :load_config] do
 	    ActiveRecord::Base.establish_connection(ActiveRecord::Base.configurations['test'])
 	    ActiveRecord::Migrator.migrate(ActiveRecord::Migrator.migrations_path)
-	    Rake::Task['db:schema:dump'].invoke
     end
   end
 end
